--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,7 +12,17 @@
 		<servlet-name>guestbook</servlet-name>
 		<url-pattern>/guestbook</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>sign</servlet-name>
+		<servlet-class>guestbook.SignGuestbookServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>sign</servlet-name>
+		<url-pattern>/sign</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>guestbook.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
